testdata/baselines/reference/submodule/conformance/privateNameAndIndexSignature.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNameAndIndexSignature.ts(4,5): error TS7022: '["#bar"]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
privateNameAndIndexSignature.ts(6,14): error TS2339: Property '#f' does not exist on type 'A'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNameAndIndexSignature.ts (2 errors) ====
    class A {
        [k: string]: any;
        #foo = 3;
        ["#bar"] = this["#bar"]   // Error (private identifiers should not prevent circularity checking for computeds)
        ~~~~~~~~
!!! error TS7022: '["#bar"]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
        constructor(message: string) {
            this.#f = 3           // Error (index signatures do not implicitly declare private names)
                 ~~
!!! error TS2339: Property '#f' does not exist on type 'A'.
            this["#foo"] = 3;     // Okay (type has index signature and "#foo" does not collide with private identifier #foo)
    
        }
    }
    